--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <h1 class="title">Title</h1>
+    <h1>Primer Ejercio de Condicionales</h1>
+    <script src="./script.js"></script>
   </body>
 </html>
